# IBA

./: README.md
CLE/hbp_nrp_cle/hbp_nrp_cle/cle/: DeterministicClosedLoopEngine.py
CLE/hbp_nrp_cle/hbp_nrp_cle/externalsim/: AsyncEmaCall.py  ExternalModule.py  __init__.py  (+1 more)
Experiments/iba_holodeck/: iba.launch  iba_holodeck.bibi  iba_holodeck.exc
GazeboRosPackages/src/cle_ros_msgs/: CMakeLists.txt  package.xml  setup.py
GazeboRosPackages/src/cle_ros_msgs/msg/: CLEError.msg  CSVRecordedFile.msg  ClientLoggerMessage.msg  Device.msg  ExperimentPopulationInfo.msg  NeuronParameter.msg  PopulationInfo.msg  Pose.msg  RobotInfo.msg  SimulationLifecycleStateChange.msg  SimulationMetrics.msg  SpikeEvent.msg  Topic.msg  TransferFunction.msg  Variable.msg
GazeboRosPackages/src/cle_ros_msgs/src/external_module_interface/: __init__.py  external_module.py
GazeboRosPackages/src/cle_ros_msgs/srv/: ActivateTransferFunction.srv  AddRobot.srv  AddTransferFunction.srv  ChangePose.srv  ConvertTransferFunctionRawToStructured.srv  CreateNewSimulation.srv  DeleteRobot.srv  DeleteTransferFunction.srv  EditTransferFunction.srv  ExtendTimeout.srv  GetBrain.srv  GetCSVRecordersFiles.srv  GetPopulations.srv  GetRobots.srv  GetSimulationCapabilities.srv  GetStructuredTransferFunctions.srv  GetTransferFunctions.srv  Health.srv  IsSimulationRunning.srv  ResetSimulation.srv  Resource.srv  SetBrain.srv  SetPopulations.srv  SetStructuredTransferFunction.srv  SimulationPlayback.srv  SimulationRecorder.srv  Trigger.srv
GazeboRosPackages/src/iba_multimodule_experiment/: CMakeLists.txt  package.xml
(+9 files in other folders)
